--- a/src/home.html
+++ b/src/home.html
@@ -1,6 +1,6 @@
 <template>
   <require from="nav-bar.html"></require>
-  <div class="ui container page-host">
+  <div class="ui container page-host" style="background-color:#F6F4F4;">
     <nav-bar router.bind="router"></nav-bar>
     <router-view></router-view>
   </div>
