--- a/src/viewmodels/signup/signup.html
+++ b/src/viewmodels/signup/signup.html
@@ -4,11 +4,11 @@
     <div class="two fields">
       <div class="field">
         <label>First Name</label>
-        <input placeholder="First Name" type="text" value.bind="firstName">
+        <input placeholder="Username" type="text" value.bind="username">
       </div>
       <div class="field">
         <label>Last Name</label>
-        <input placeholder="Last Name" type="text" value.bind="lastName">
+        <input placeholder="Name" type="text" value.bind="name">
       </div>
     </div>
     <div class="field">
