--- a/src/nav-bar.html
+++ b/src/nav-bar.html
@@ -1,5 +1,5 @@
 <template bindable="router">
-  <nav class="ui inverted menu">
+  <nav class="ui inverted blue menu">
     <header class="header item"><a href="/"> Twitter </a></header>
     <div class="right menu">
       <div repeat.for="row of router.navigation">
