commit for deplyoment on heroku

--- a/src/viewmodels/signup/signup.html
+++ b/src/viewmodels/signup/signup.html
@@ -3,11 +3,11 @@
     <h3 class="ui header">Register</h3>
     <div class="two fields">
       <div class="field">
-        <label>First Name</label>
+        <label>Username</label>
         <input placeholder="Username" type="text" value.bind="username">
       </div>
       <div class="field">
-        <label>Last Name</label>
+        <label>Name</label>
         <input placeholder="Name" type="text" value.bind="name">
       </div>
     </div>
