--- a/src/viewmodels/userTimeline/userTimeline.html
+++ b/src/viewmodels/userTimeline/userTimeline.html
@@ -1,5 +1,7 @@
 <template>
+  <h3 class='ui dividing header blue attached segment'> ${user.username}'s Timeline </h3>
+
+  <div class="ui horizontal divider"></div>
 
   <compose view-model="../timeline/timeline" model.bind="tweets"></compose>
-
 </template>
