--- a/src/viewmodels/globalTimeline/globalTimeline.html
+++ b/src/viewmodels/globalTimeline/globalTimeline.html
@@ -1,43 +1,10 @@
 <template>
-  <require from="./blob-to-url"></require>
-  <require from="./file-list-to-array"></require>
+  <h3 class='ui dividing header blue attached segment'> Global Timeline </h3>
 
-  <div class="ui grid">
-    <div class="three wide column"></div>
-    <div class="ten wide column">
+  <div class="ui horizontal divider"></div>
 
-      <form submit.delegate="createTweet()" class="ui form stacked segment">
-
-        <h3 class='ui dividing header'> Personal Timeline </h3>
-
-        <div class="grouped inline fields">
-          <label>Text</label>
-          <textarea type="textarea" rows="3" maxlength="140" value.bind="tweetText"></textarea>
-        </div>
-
-        <div class="grouped inline fields">
-          <!--<input type="file" accept="image/*" name="tweetImage" id="tweetImage" files.bind="tweetImage" change.delegate="addPicturesToArray($event)">-->
-
-          <label>Image</label>
-          <input type="file" accept="image/*" name="image" id="image" files.bind="selectedFiles" change.delegate="addPicturesToArray($event)">
-
-          <table>
-            <tr>
-              <th repeat.for="file of imageList">
-                <img src.bind="file | blobToUrl" height="200" width="auto"><img>
-              </th>
-            </tr>
-          </table>
-        </div>
-        <button class="ui blue submit button">Twittern</button>
-
-      </form>
-
-    </div>
-    <div class="three wide column"></div>
-  </div>
+  <compose view-model="../tweet/tweet"></compose>
 
   <compose view-model="../timeline/timeline" model.bind="tweets"></compose>
-
 </template>
 
