--- a/src/viewmodels/timeline/timeline.html
+++ b/src/viewmodels/timeline/timeline.html
@@ -1,19 +1,21 @@
 <template>
+  <require from="./timeline"></require>
 
   <div class="ui grid">
     <div class="three wide column"></div>
     <div class="ten wide column">
 
       <div class="ui field piled segment" repeat.for="tweet of tweets">
-        <h3 class="ui dividing header">${tweet.tweeter.name} </h3>
-        <!--<div class="ui stackable two column grid">
-          <div class="column">
-            <h3 class="ui dividing header">${tweet.tweeter.name} </h3>
+        <div class="ui grid">
+          <div class="nine wide column">
+            <h3 class="ui header">${tweet.tweeter.name} </h3>
           </div>
-          <div class="column">
-            <h6 class="ui header">@${tweet.tweeter.username}</h6>
+          <div class="right floated column">
+            <i class="large trash outline icon" click.delegate="deleteTweet(tweet)" show.bind="allowDelete(tweet)"></i>
           </div>
-        </div>-->
+        </div>
+        <div class="ui divider"></div>
+
         <div class="field">
           ${tweet.text}
         </div>
