--- a/src/viewmodels/usercard/usercard.html
+++ b/src/viewmodels/usercard/usercard.html
@@ -1,14 +1,21 @@
 <template>
-  <form submit.trigger="follow()" class="ui form stacked segment">
 
-    <h3 class='ui dividing header'>${user.username}</h3>
+  <div class="ui piled segment">
+
+    <a class="header" route-href="route: userTimeline; params.bind: {id: user._id}" style="font-size: 20px; font-weight: bold;">${user.name}</a>
+    <div class="ui divider"></div>
     <div class="grouped inline fields">
-      <div class="field">
-        <img src="src/images/homer4.jpeg" height="100" width="100"><img>
+      <div class="ui field" >
+        <img src="src/images/homer4.jpeg" height="150" width="150"><img>
       </div>
     </div>
 
-    <button class="ui blue submit button" disabled.bind="alreadyFollowing">Follow</button>
+    <div class="ui divider"></div>
 
-  </form>
+    <form submit.trigger="follow()" class="ui form">
+      <button class="ui blue submit button" hide.bind="alreadyFollowing">Follow</button>
+      <button class="ui red submit button" show.bind="alreadyFollowing">Unfollow</button>
+    </form>
+
+  </div>
 </template>
