refactored timelines, refactored eventaggregator for timelines, added personal timeline in profil, added deleteAllTweets in profil

--- a/src/viewmodels/followerTimeline/followerTimeline.html
+++ b/src/viewmodels/followerTimeline/followerTimeline.html
@@ -5,5 +5,5 @@
 
   <compose view-model="../tweet/tweet"></compose>
 
-  <compose view-model="../timeline/timeline" model.bind="tweets"></compose>
+  <compose view-model="../timeline/timeline" model.bind="users"></compose>
 </template>
