--- a/src/viewmodels/userTimeline/userTimeline.html
+++ b/src/viewmodels/userTimeline/userTimeline.html
@@ -3,5 +3,5 @@
 
   <div class="ui horizontal divider"></div>
 
-  <compose view-model="../timeline/timeline" model.bind="tweets"></compose>
+  <compose view-model="../timeline/timeline" model.bind="[user]"></compose>
 </template>
