--- a/src/viewmodels/globalTimeline/globalTimeline.html
+++ b/src/viewmodels/globalTimeline/globalTimeline.html
@@ -5,6 +5,6 @@
 
   <compose view-model="../tweet/tweet"></compose>
 
-  <compose view-model="../timeline/timeline" model.bind="tweets"></compose>
+  <compose view-model="../timeline/timeline" model.bind="users"></compose>
 </template>
 
