--- a/src/viewmodels/signup/signup.html
+++ b/src/viewmodels/signup/signup.html
@@ -4,21 +4,31 @@
     <div class="two fields">
       <div class="field">
         <label>Username</label>
-        <input placeholder="Username" type="text" value.bind="username">
+        <input placeholder="Username" type="text" value.bind="username" required>
       </div>
       <div class="field">
         <label>Name</label>
-        <input placeholder="Name" type="text" value.bind="name">
+        <input placeholder="Name" type="text" value.bind="name" required>
       </div>
     </div>
     <div class="field">
       <label>Email</label>
-      <input placeholder="Email" type="text" value.bind="email">
+      <input placeholder="Email" type="text" value.bind="email" required>
     </div>
     <div class="field">
       <label>Password</label>
-      <input type="password" value.bind="password">
+      <input type="password" value.bind="password" pattern=".{6,}" required title="6 characters minimum">
     </div>
     <button class="ui blue submit button">SignUp</button>
   </form>
+
+  <div class="ui negative message transition" show.bind="errorText !== null">
+    <i class="close icon"></i>
+    <div class="header">
+      There was some errors with your submission
+    </div>
+    <div class="field">
+      ${errorText}
+    </div>
+  </div>
 </template>
