--- a/src/home.html
+++ b/src/home.html
@@ -1,5 +1,5 @@
 <template>
-  <require from="nav-bar.html"></require>
+  <require from="nav-bar"></require>
   <div class="ui container page-host" style="background-color:#F6F4F4;">
     <nav-bar router.bind="router"></nav-bar>
     <router-view></router-view>
