--- a/src/viewmodels/usercard/usercard.html
+++ b/src/viewmodels/usercard/usercard.html
@@ -7,7 +7,7 @@
     <div class="ui divider"></div>
     <div class="grouped inline fields">
       <div class="ui field" >
-        <img src="src/images/homer4.jpeg" height="150" width="150" hide.bind="hasProfilImage()"><img>
+        <img src="${user.image_src}" height="140" width="180" hide.bind="hasProfilImage()"><img>
       </div>
     </div>
 
