--- a/src/viewmodels/timeline/timeline.html
+++ b/src/viewmodels/timeline/timeline.html
@@ -11,7 +11,7 @@
             <h3 class="ui header">${tweet.tweeter.name} </h3>
           </div>
           <div class="right floated column">
-            <i class="large trash outline icon" click.delegate="deleteTweet(tweet)" show.bind="allowDelete(tweet)"></i>
+            <i class="large black trash outline icon" click.delegate="deleteTweet(tweet)" show.bind="allowDelete(tweet)"></i>
           </div>
         </div>
         <div class="ui divider"></div>
