--- a/src/viewmodels/signup/signup.html
+++ b/src/viewmodels/signup/signup.html
@@ -13,7 +13,7 @@
     </div>
     <div class="field">
       <label>Email</label>
-      <input placeholder="Email" type="text" value.bind="email" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$" required title="*@*.*">
+      <input placeholder="Email" type="text" value.bind="email" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$" required title="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$">
     </div>
     <div class="field">
       <label>Password</label>
