--- a/src/viewmodels/followerTimeline/followerTimeline.html
+++ b/src/viewmodels/followerTimeline/followerTimeline.html
@@ -1,5 +1,5 @@
 <template>
-  <h3 class='ui dividing header blue attached segment'> Personal Timeline </h3>
+  <h3 class='ui dividing header blue attached segment'> Follower Timeline </h3>
 
   <div class="ui horizontal divider"></div>
 
