--- a/src/viewmodels/timeline/timeline.html
+++ b/src/viewmodels/timeline/timeline.html
@@ -11,9 +11,10 @@
             <h3 class="ui header">${tweet.tweeter.name} </h3>
           </div>
           <div class="right floated column">
-            <i class="large black trash outline icon" click.delegate="deleteTweet(tweet)" show.bind="allowDelete(tweet)"></i>
+            <i class="large black trash outline icon" click.delegate="deleteTweet(tweet)" show.bind="canDelete(tweet)"></i>
           </div>
         </div>
+
         <div class="ui divider"></div>
 
         <div class="field">
@@ -21,6 +22,12 @@
         </div>
         <div class="field">
           <img src.bind="tweet.image_src" height="auto" width="100%"><img>
+        </div>
+
+        <div class="ui divider"></div>
+
+        <div class="meta">
+          <span class="date">${getDateInFormat(tweet)}</span>
         </div>
       </div>
 
