--- a/src/viewmodels/usercard/usercard.html
+++ b/src/viewmodels/usercard/usercard.html
@@ -1,5 +1,4 @@
 <template>
-  <!--<require from="../admin/admin"></require>-->
 
   <div class="ui piled segment">
 
@@ -8,8 +7,8 @@
       <div class="header" style="font-size: 20px; font-weight: bold;">${user.username}</div>
       <div class="ui divider"></div>
       <div class="grouped inline fields">
-        <div class="image" >
-          <img src="${user.image_src}" height="140" width="180" hide.bind="hasProfilImage()"><img>
+        <div class="ui centered image" >
+          <img src="${user.image_src}" style="height: 150px" width="100%" hide.bind="hasProfilImage()"><img>
         </div>
       </div>
     </span>
