--- a/src/viewmodels/profil/profil.html
+++ b/src/viewmodels/profil/profil.html
@@ -66,7 +66,7 @@
         <div class="statistic">
           <div class="value">
             <i class="comments icon"></i>
-            ${getNumberOfTweets()}
+            ${numberOfOwnTweets}
           </div>
           <div class="label">
             Tweets
